--- a/components/PokemonItemModified/PokemonItemModified.module.scss
+++ b/components/PokemonItemModified/PokemonItemModified.module.scss
@@ -14,6 +14,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: white;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
 
     h2 {
       margin-block: 0;
@@ -26,7 +28,7 @@
       right: 0;
       background-color: pokemonItem.$base-color;
       overflow: hidden;
-      width: 0%;
+      width: 1%;
       height: 100%;
       opacity: 0.8;
       -webkit-transition: 0.5s ease;
@@ -48,7 +50,6 @@
     &:hover .contentOverlay {
       top: 0;
       right: 0;
-      height: 100%;
       width: 100%;
       opacity: 0.5;
 
@@ -59,7 +60,8 @@
     }
 
     &:hover h2 {
-      opacity: 0;
+      opacity: 0.3;
+      color: darken($color: pokemonItem.$base-color, $amount: 10%);
     }
   }
 }
