--- a/pages/grid/grid.module.scss
+++ b/pages/grid/grid.module.scss
@@ -1,22 +1,8 @@
 $colors: rgb(248, 248, 248), rgb(238, 238, 238), rgb(250, 250, 250), rgb(207, 207, 207), rgb(245, 245, 245), rgb(212, 212, 212);
 
-body,
-html {
-    height: 100%;
-}
-
-body {
-    margin: 0;
-    font-family: 'Montserrat';
-}
-
-h1 {
-    margin: 5rem;
-}
-
-main {
+.main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(19rem, 1fr));
     grid-gap: 1rem;
     cursor: pointer;
 
